--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,6 +14,7 @@
 @import "images";
 @import "code";
 @import "grid";
+@import "container-grid";
 @import "tables";
 @import "forms";
 @import "buttons";
@@ -42,6 +43,11 @@
 @import "spinners";
 @import "utilities";
 @import "print";
+
+section{
+    margin-bottom: 70px;
+}
+
 .brand-text-icon{
     font-size: 26px;
     font-weight: 500;
@@ -53,6 +59,7 @@
     }
 }
 header{
+    margin-bottom: 45px;
     border-bottom: 1px solid $gray-200;
     width: 100%;
     position: relative;
@@ -79,4 +86,8 @@ header{
             }
         }
     }
+}
+
+.card{
+    height: 100%;
 }
