--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,7 +4,8 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400,500,700&display=swap');
+@import "colorVariables";
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -44,41 +45,47 @@
 @import "utilities";
 @import "print";
 
-section{
+section {
     margin-bottom: 70px;
 }
 
-.brand-text-icon{
+.brand-text-icon {
     font-size: 26px;
     font-weight: 500;
     font-family: 'Poppins', sans-serif;
     color: $primary;
-    &:hover{
+
+    &:hover {
         color: $primary;
         text-decoration: none;
     }
 }
-header{
+
+header {
     margin-bottom: 45px;
     border-bottom: 1px solid $gray-200;
     width: 100%;
     position: relative;
-    .navbar{
+
+    .navbar {
         height: 80px;
-        ul.navbar-nav{
-            li.nav-item{
-                &.active{
-                    a.nav-link{
+
+        ul.navbar-nav {
+            li.nav-item {
+                &.active {
+                    a.nav-link {
                         color: $primary;
                     }
                 }
-                a{
-                    &.nav-link{
+
+                a {
+                    &.nav-link {
                         letter-spacing: 1.5px;
                         color: $gray-900;
                         padding-left: 1rem;
                         padding-right: 1rem;
-                        &:hover{
+
+                        &:hover {
                             text-decoration: underline;
                         }
                     }
@@ -89,72 +96,95 @@ header{
 }
 
 .img-cover {
-    object-fit: cover;height: 100%;width: 100%;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
 }
 
 .img-contain {
-    object-fit: contain;height: 100%;width: 100%;
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
 }
 
-.card{
+.card {
     height: 100%;
-    .tag{
+
+    .tag {
         z-index: 3;
         font-size: 0.875rem;
         background-color: $pink;
         padding: 0.25rem 1.25rem;
         position: absolute;
-        top: 0; right: 0;
+        top: 0;
+        right: 0;
         color: $white;
         min-height: 30px;
         border-radius: 0px 15px;
-        span{
+
+        span {
             font-weight: 300;
         }
     }
-    .img-wrapper{
+
+    .img-wrapper {
         height: 100;
         margin-bottom: 0;
         border-radius: 0.9375rem;
         overflow: hidden;
     }
 
-    .meta-wrapper{
+    .meta-wrapper {
         margin-top: 1rem;
-        h5{
+
+        h5 {
             font-size: 1.125rem;
             margin-bottom: 2px;
         }
-        span{
+
+        span {
             font-size: 0.875rem;
         }
     }
-    &.card-featured{
+
+    &.card-featured {
         overflow: hidden;
         cursor: pointer;
         height: 100%;
         border-radius: 15px;
-        &:after{
+
+        &:after {
             position: absolute;
-            content: ""; top: 0;left: 0;right: 0;bottom: 0; transform: scale(1.1);
+            content: "";
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            transform: scale(1.1);
             transition: .5s transform ease-in-out;
             z-index: 2;
-            @include gradient-y(rgba($black,0),rgba($black,.51), rgba($black,100))
+            @include gradient-y(rgba($black, 0), rgba($black, .51), rgba($black, 100))
         }
-        .img-wrapper{
+
+        .img-wrapper {
             z-index: 1;
             margin: 0;
             position: absolute;
-            top: 0;left: 0;right: 0;bottom: 0; 
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
             transform: scale(1.1);
             transition: 0.25s transform ease-in-out;
         }
-        .meta-wrapper{
+
+        .meta-wrapper {
             z-index: 4;
             color: $white;
             padding: 20px;
             position: absolute;
-            top: 0;bottom: 0;
+            top: 0;
+            bottom: 0;
             width: 100%;
             transform: translateY(0);
             transition: 0.3s transform ease-in-out;
@@ -162,16 +192,57 @@ header{
             justify-content: flex-end;
             flex-direction: column;
         }
-        &:hover{
-            .meta-wrapper{
+
+        &:hover {
+            .meta-wrapper {
                 transform: translateY(-10px);
             }
-            &:after{
+
+            &:after {
                 transform: scale(1);
             }
+
             .img-wrapper {
                 transform: scale(1);
             }
         }
+    }
+}
+
+.testimonial-hero,
+.testimonial-hero img {
+    width: 365px;
+    height: 500px;
+}
+
+footer {
+    border-top: 1px solid $gray-200;
+    padding-top: 50px;
+    .brand-tagline{
+        color: $gray-500;
+        font-weight: 300;
+        margin-top: 8px;
+    }
+
+    .list-group-item {
+        padding: 0.3125rem 0;
+        border: 0;
+
+        a,
+        span {
+            color: $gray-500;
+            font-weight: 300;
+        }
+
+        a {
+            @include hover-focus {
+                color: $gray-800;
+            }
+        }
+    }
+    .copyrights{
+        margin: 50px 0 ;
+        font-weight: 300;
+        color: $gray-500;
     }
 }
